# webapp

./: Cargo.toml
common/db/: .env  Cargo.toml
common/db/migrations/2019-11-17-145608_create_posts/: up.sql
common/db/src/: lib.rs
common/db/src/models/: mod.rs  models.rs
common/logger/: Cargo.toml  log4rs.yml
common/logger/src/: lib.rs
src/: main.rs  test.rs
src/handler/: mod.rs  user_handler.rs
src/httpserver/: httpserver.rs
src/model/: api_result.rs  mod.rs
