[package]
name = "webapp"
version = "0.1.0"
authors = ["fenger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-rt = "0.2.5"
actix-web = "1.0.5"

serde = "1.0.99"
serde_json = "1.0.41"

env_logger = "0.7.1"

# used to auto-reloading development server
listenfd = "0.3.3"

