[package]
name = "webapp"
version = "0.1.0"
authors = ["fenger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-logger = { path = "./common/logger" }

actix-rt = "0.2.5"
actix-web = "1.0.5"

serde = "1.0.99"
serde_json = "1.0.41"

log = "0.4.8"
env_logger = "0.7.1"
log4rs = "0.8.3"

# date and time
chrono = "0.4.9"

# used to auto-reloading development server
listenfd = "0.3.3"

[workspace]
members = [
    "common/logger",
]
