[package]
name = "common-logger"
version = "0.1.0"
authors = ["wangzhifeng <wangzhifeng@aiops.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
log4rs = "0.8.3"

# date and time
chrono = "0.4.9"
